force-app/main/default/objects/CC_Administracion_Lista_Blanca__c/CC_Administracion_Lista_Blanca__c.object-meta.xml
<CustomObject>
    <label>Administración Lista Blanca</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Nombre</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Administración Lista Blanca</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>