force-app/main/default/objects/CC_Administracion_Lista_Blanca__c/fields/CC_Activo__c.field-meta.xml
<CustomField>
    <fullName>CC_Activo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Activo</label>
    <type>Checkbox</type>
</CustomField>