force-app/main/default/objects/CC_Administracion_Lista_Blanca__c/fields/CC_Canal_Contacto__c.field-meta.xml
<CustomField>
    <fullName>CC_Canal_Contacto__c</fullName>
    <label>Canal de Contacto</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Chat</fullName>
            </value>
            <value>
                <fullName>Chat App</fullName>
            </value>
            <value>
                <fullName>Chat web</fullName>
            </value>
            <value>
                <fullName>Comentarios Stores</fullName>
            </value>
            <value>
                <fullName>Twitter</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Carta</fullName>
                <isActive>false</isActive>
                <label>Carta</label>
            </value>
            <value>
                <fullName>Carta - Asociaciones de Consumo</fullName>
                <isActive>false</isActive>
                <label>Carta - Asociaciones de Consumo</label>
            </value>
            <value>
                <fullName>Carta - CCAA</fullName>
                <isActive>false</isActive>
                <label>Carta - CCAA</label>
            </value>
            <value>
                <fullName>Carta - Junta Andalucía</fullName>
                <isActive>false</isActive>
                <label>Carta - Junta Andalucía</label>
            </value>
            <value>
                <fullName>Carta - OMIC</fullName>
                <isActive>false</isActive>
                <label>Carta - OMIC</label>
            </value>
            <value>
                <fullName>Facebook</fullName>
                <isActive>false</isActive>
                <label>Facebook</label>
            </value>
            <value>
                <fullName>Formulario  Servicio Oficina</fullName>
                <isActive>false</isActive>
                <label>Formulario  Servicio Oficina</label>
            </value>
            <value>
                <fullName>Formulario web -  cliente</fullName>
                <isActive>false</isActive>
                <label>Formulario web -  cliente</label>
            </value>
            <value>
                <fullName>Instagram</fullName>
                <isActive>false</isActive>
                <label>Instagram</label>
            </value>
            <value>
                <fullName>Teléfono</fullName>
                <isActive>false</isActive>
                <label>Teléfono</label>
            </value>
            <value>
                <fullName>Web</fullName>
                <isActive>false</isActive>
                <label>Web</label>
            </value>
            <value>
                <fullName>Whatsapp</fullName>
                <isActive>false</isActive>
                <label>Whatsapp</label>
            </value>
            <value>
                <fullName>YouTube</fullName>
                <isActive>false</isActive>
                <label>YouTube</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>