force-app/main/default/objects/CC_Administracion_Lista_Blanca__c/fields/CC_Prioridad__c.field-meta.xml
<CustomField>
    <fullName>CC_Prioridad__c</fullName>
    <label>Prioridad</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Critial</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>