force-app/main/default/objects/CC_Administracion_Lista_Blanca__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CC_Activo__c</columns>
    <columns>CC_Canal_Contacto__c</columns>
    <columns>CC_Prioridad__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>