force-app/main/default/objects/CC_Administracion_Lista_Blanca__c/listViews/CC_Chat.listView-meta.xml
<ListView>
    <fullName>CC_Chat</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CC_Canal_Contacto__c</field>
        <operation>equals</operation>
        <value>Chat,Chat App,Chat web</value>
    </filters>
    <label>Chat</label>
</ListView>