force-app/main/default/objects/CC_Administracion_Lista_Blanca__c/listViews/CC_Stores.listView-meta.xml
<ListView>
    <fullName>CC_Stores</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CC_Canal_Contacto__c</field>
        <operation>equals</operation>
        <value>Comentarios Stores</value>
    </filters>
    <label>Stores</label>
</ListView>