force-app/main/default/objects/CC_Administracion_Lista_Blanca__c/listViews/OS_Dominios_email_permitidos.listView-meta.xml
<ListView>
    <fullName>OS_Dominios_email_permitidos</fullName>
    <columns>NAME</columns>
    <columns>CC_Canal_Contacto__c</columns>
    <columns>CC_Prioridad__c</columns>
    <columns>CC_Activo__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>CBK_Negocio__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CBK_Negocio__c</field>
        <operation>equals</operation>
        <value>COPS</value>
    </filters>
    <filters>
        <field>CC_Canal_Contacto__c</field>
        <operation>equals</operation>
        <value>Email</value>
    </filters>
    <label>COPS: Dominios email permitidos</label>
    <sharedTo>
        <role>COPS</role>
    </sharedTo>
</ListView>